force-app/main/default/objects/Anime__c/Anime__c.object-meta.xml
<CustomObject>
    <label>Anime</label>
    <nameField>
        <label>Animes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>