force-app/main/default/objects/Anime__c/fields/Anime_Lead_Character__c.field-meta.xml
<CustomField>
    <fullName>Anime_Lead_Character__c</fullName>
    <label>Anime Lead Character</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>