force-app/main/default/objects/Anime__c/fields/Number_of_Episodes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Episodes__c</fullName>
    <label>Number of Episodes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>